# WRAITH-Protocol

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  GEMINI.md  LICENSE  README.md  REFACTORING_ANALYSIS_v0.7.0.md  SECURITY.md  book.toml  clippy.toml  deny.toml  start_redops.sh
clients/wraith-chat/src-tauri/: Cargo.toml  tauri.conf.json
clients/wraith-chat/src-tauri/capabilities/: default.json
clients/wraith-chat/src-tauri/src/: audio.rs  commands.rs  crypto.rs  database.rs  group.rs  integration_tests.rs  lib.rs  main.rs  secure_storage.rs  state.rs  video.rs  video_call.rs  voice_call.rs
clients/wraith-ios/wraith-swift-ffi/: Cargo.toml  build.rs
clients/wraith-ios/wraith-swift-ffi/src/: discovery.rs  error.rs  integration_tests.rs  keychain.rs  lib.rs  push.rs  wraith.udl
clients/wraith-mesh/src-tauri/: Cargo.toml  tauri.conf.json
clients/wraith-mesh/src-tauri/src/: commands.rs  database.rs  dht_inspector.rs  diagnostics.rs  error.rs  export.rs  lib.rs  main.rs  network_monitor.rs  state.rs
clients/wraith-publish/src-tauri/: Cargo.toml  tauri.conf.json
clients/wraith-publish/src-tauri/src/: commands.rs  content.rs  database.rs  error.rs  lib.rs  main.rs  markdown.rs  propagation.rs  publisher.rs  reader.rs  rss.rs  signatures.rs  state.rs  storage.rs
clients/wraith-redops/operator-client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
clients/wraith-redops/operator-client/src-tauri/capabilities/: default.json
clients/wraith-redops/operator-client/src-tauri/src/: lib.rs  main.rs
clients/wraith-redops/spectre-implant/: Cargo.toml  README.md
clients/wraith-redops/spectre-implant/resources/: README.md
clients/wraith-redops/spectre-implant/runner_src/: Runner.cs  Runner.csproj
clients/wraith-redops/spectre-implant/runner_src/Wraith.Runner/: Runner.cs  Wraith.Runner.csproj
clients/wraith-redops/spectre-implant/src/: lib.rs
clients/wraith-redops/spectre-implant/src/c2/: mod.rs  packet.rs  test_packet_rekey.rs
clients/wraith-redops/spectre-implant/src/modules/: bof_loader.rs  browser.rs  clr.rs  collection.rs  compression.rs  credentials.rs  discovery.rs  evasion.rs  exfiltration.rs  impact.rs  ingress.rs  injection.rs  lateral.rs  mesh.rs  mod.rs  patch.rs  persistence.rs  powershell.rs  privesc.rs  screenshot.rs  shell.rs  sideload.rs  smb.rs  socks.rs  test_ipv6.rs  test_mesh_crypto.rs  token.rs  transform.rs
clients/wraith-redops/spectre-implant/src/utils/: api_resolver.rs  entropy.rs  heap.rs  mod.rs  obfuscation.rs  sensitive.rs  syscalls.rs  test_heap.rs  test_sensitive.rs  windows_definitions.rs
clients/wraith-redops/spectre-implant/tests/: test_smb.rs
clients/wraith-redops/team-server/: Cargo.toml  README.md  build.rs
clients/wraith-redops/team-server/migrations/: 20251129000000_initial_schema.sql  20260125000000_audit_signature.sql  20260125000001_persistence_table.sql  20260126000000_attack_chains.sql  20260126000001_playbooks.sql  20260127000000_listeners_table.sql
clients/wraith-redops/team-server/playbooks/: apt29.yaml  generic_ransomware.json
clients/wraith-redops/team-server/src/: auth_tests.rs  governance.rs  killswitch_config_test.rs  main.rs  operator_service_test.rs  powershell_test.rs  utils.rs
clients/wraith-stream/src-tauri/: Cargo.toml  tauri.conf.json
clients/wraith-stream/src-tauri/src/: commands.rs  database.rs  discovery.rs  error.rs  lib.rs  main.rs  player.rs  segment_storage.rs  state.rs  stream_manager.rs  subtitles.rs  transcoder.rs
clients/wraith-sync/src-tauri/: Cargo.toml  tauri.conf.json
clients/wraith-sync/src-tauri/capabilities/: default.json
clients/wraith-sync/src-tauri/src/: commands.rs  config.rs  database.rs  delta.rs  error.rs  lib.rs  main.rs  state.rs  sync_engine.rs  watcher.rs
clients/wraith-transfer/src-tauri/: Cargo.toml  tauri.conf.json
clients/wraith-transfer/src-tauri/capabilities/: default.json
clients/wraith-transfer/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
clients/wraith-vault/src-tauri/: Cargo.toml  tauri.conf.json
clients/wraith-vault/src-tauri/src/: backup.rs  chunker.rs  commands.rs  compression.rs  database.rs  dedup.rs  erasure.rs  error.rs  guardian.rs  integration_tests.rs  lib.rs  main.rs  recovery.rs  restore.rs  secrets.rs  shamir.rs  shard.rs  state.rs
crates/wraith-crypto/: Cargo.toml
crates/wraith-crypto/benches/: crypto_bench.rs
crates/wraith-crypto/src/: aead.rs  constant_time.rs  context.rs  elligator.rs  encrypted_keys.rs  error.rs  hash.rs  hybrid.rs  kdf.rs  lib.rs  mldsa.rs  noise.rs  packet_ratchet.rs  pq.rs  random.rs  ratchet.rs  signatures.rs  suite.rs  x25519.rs
crates/wraith-crypto/src/aead/: cipher.rs  mod.rs  replay.rs  session.rs
crates/wraith-crypto/tests/: coverage_boost_tests.rs  double_ratchet_tests.rs  v2_full_pipeline.rs  v2_hybrid_integration.rs  v2_kdf_integration.rs  v2_packet_ratchet_integration.rs  v2_suite_integration.rs  vectors.rs  zeroization_tests.rs
crates/wraith-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/wraith-ffi/src/: config.rs  error.rs  lib.rs  node.rs  session.rs  transfer.rs  types.rs
crates/wraith-transport/: Cargo.toml
crates/wraith-transport/src/: af_xdp.rs  af_xdp_transport.rs  buffer_pool.rs  factory.rs  io_uring.rs  io_uring_net.rs  lib.rs  manager.rs  mtu.rs  numa.rs  quic.rs  tcp.rs  transport.rs  udp.rs  udp_async.rs  websocket.rs  worker.rs
crates/wraith-xdp/: Cargo.toml
crates/wraith-xdp/src/: lib.rs  xdp_filter.c
tests/: Cargo.toml  integration_advanced.rs  integration_edge_cases.rs  integration_hardening.rs  integration_tests.rs  property_tests.rs  test_helpers.rs  v2_compat_integration.rs  v2_connection_id_integration.rs  v2_header_integration.rs  v2_polymorphic_integration.rs  v2_wire_format_full_pipeline.rs  v3_quic_transport_integration.rs  v3_tcp_transport_integration.rs  v3_transport_factory_integration.rs  v3_transport_full_pipeline.rs  v3_transport_manager_integration.rs  v3_websocket_transport_integration.rs
tests/fixtures/: two_node.rs
tools/roe-signer/: Cargo.toml
tools/roe-signer/src/: main.rs
(+762 files in other folders)
