[package]
name = "wraith-integration-tests"
description = "Integration tests for WRAITH Protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "wraith_integration_tests"
path = "lib.rs"

[dependencies]
wraith-core = { path = "../crates/wraith-core" }
wraith-crypto = { path = "../crates/wraith-crypto" }
wraith-transport = { path = "../crates/wraith-transport" }
wraith-obfuscation = { path = "../crates/wraith-obfuscation" }
wraith-discovery = { path = "../crates/wraith-discovery" }
wraith-files = { path = "../crates/wraith-files" }
rand_core = { workspace = true }
rand = "0.8"
hex = { workspace = true }
tracing = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = "3"
tokio = { workspace = true }

[[test]]
name = "integration_tests"
path = "integration_tests.rs"

[[test]]
name = "property_tests"
path = "property_tests.rs"

[[test]]
name = "integration_advanced"
path = "integration_advanced.rs"

[[test]]
name = "integration_hardening"
path = "integration_hardening.rs"

[[test]]
name = "integration_edge_cases"
path = "integration_edge_cases.rs"

[[test]]
name = "v2_connection_id_integration"
path = "v2_connection_id_integration.rs"

[[test]]
name = "v2_header_integration"
path = "v2_header_integration.rs"

[[test]]
name = "v2_polymorphic_integration"
path = "v2_polymorphic_integration.rs"

[[test]]
name = "v2_compat_integration"
path = "v2_compat_integration.rs"

[[test]]
name = "v2_wire_format_full_pipeline"
path = "v2_wire_format_full_pipeline.rs"

[[bench]]
name = "transport_benchmarks"
path = "../benches/transport_benchmarks.rs"
harness = false

[[bench]]
name = "transfer"
path = "../benches/transfer.rs"
harness = false
