[package]
name = "roe-signer"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Sign WRAITH-Recon Rules of Engagement (ROE) JSON files with Ed25519"

[[bin]]
name = "roe-signer"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
