[package]
name = "wraith-chat"
version = "1.6.2"
description = "WRAITH-Chat - Secure E2E Encrypted Messaging"
authors = ["WRAITH Protocol Contributors"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "wraith_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wraith-chat"
path = "src/main.rs"

[dependencies]
# Tauri 2.0
tauri = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-log = "2.0"
tauri-plugin-notification = "2.0"

# WRAITH Protocol
wraith-core = { path = "../../../crates/wraith-core" }
wraith-crypto = { path = "../../../crates/wraith-crypto" }
wraith-transport = { path = "../../../crates/wraith-transport" }
wraith-discovery = { path = "../../../crates/wraith-discovery" }
wraith-files = { path = "../../../crates/wraith-files" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.38", features = ["bundled", "sqlcipher"] }

# Cryptography (beyond WRAITH core)
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
blake3 = "1"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
hex = "0.4"
base64 = "0.22"
chrono = "0.4"

# Secure key storage (cross-platform keyring)
keyring = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
