[package]
name = "wraith-chat"
version = "2.2.2"
description = "WRAITH-Chat - Secure E2E Encrypted Messaging"
authors = ["WRAITH Protocol Contributors"]
edition = "2024"
rust-version = "1.88"

[lib]
name = "wraith_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wraith-chat"
path = "src/main.rs"

[dependencies]
# Tauri 2.0
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"

# WRAITH Protocol
wraith-core = { path = "../../../crates/wraith-core" }
wraith-crypto = { path = "../../../crates/wraith-crypto" }
wraith-transport = { path = "../../../crates/wraith-transport" }
wraith-discovery = { path = "../../../crates/wraith-discovery" }
wraith-files = { path = "../../../crates/wraith-files" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.38", features = ["bundled", "sqlcipher"] }

# Cryptography (beyond WRAITH core)
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
blake3 = "1"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
hex = "0.4"
base64 = "0.22"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

# Secure key storage (cross-platform keyring)
# sync-secret-service: Uses D-Bus Secret Service API (libsecret/GNOME Keyring)
# crypto-rust: Pure Rust crypto for secret encryption over D-Bus
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

# Voice Calling (Sprint 17.5)
audiopus = "0.3.0-rc.0"
cpal = "0.17"
ringbuf = "0.4"
webrtc-vad = "0.4"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# RNNoise for noise suppression
nnnoiseless = "0.5"

# Video Calling (Sprint 17.6)
# Note: The video module provides a codec abstraction layer.
# For production use with actual VP8/VP9 encoding, install libvpx and enable:
# vpx = "0.3"  # Requires libvpx system library
# For now, video encoding/decoding is simulated for testing and development.

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
