[package]
name = "wraith-swift-ffi"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "wraith_swift"

[dependencies]
# UniFFI for automatic Swift bindings generation
uniffi = "0.25"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
log = "0.4"

# WRAITH Protocol
wraith-core = { path = "../../../crates/wraith-core" }
wraith-crypto = { path = "../../../crates/wraith-crypto" }
wraith-transport = { path = "../../../crates/wraith-transport" }
wraith-discovery = { path = "../../../crates/wraith-discovery" }
wraith-files = { path = "../../../crates/wraith-files" }

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[features]
default = []
