[package]
name = "wraith-swift-ffi"
version = "1.7.0"
edition = "2024"
rust-version = "1.88"

# This is an independent package, not part of the main workspace
[workspace]

[lib]
crate-type = ["staticlib", "cdylib"]
name = "wraith_swift"

[dependencies]
# UniFFI for automatic Swift bindings generation
uniffi = "0.25"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
log = "0.4"

# Hex encoding
hex = "0.4"

# Cryptographic RNG
rand_core = { version = "0.6", features = ["getrandom"] }

# WRAITH Protocol
wraith-core = { path = "../../../crates/wraith-core" }
wraith-crypto = { path = "../../../crates/wraith-crypto" }
wraith-transport = { path = "../../../crates/wraith-transport" }
wraith-discovery = { path = "../../../crates/wraith-discovery" }
wraith-files = { path = "../../../crates/wraith-files" }

# iOS Security framework (for Keychain on iOS)
[target.'cfg(target_os = "ios")'.dependencies]
security-framework = "2.11"
security-framework-sys = "2.11"
core-foundation = "0.9"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[features]
default = []
