[package]
name = "wraith-mesh"
version = "2.3.0"
description = "WRAITH-Mesh - Network Topology Visualization and Diagnostics"
authors = ["WRAITH Protocol Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/doublegate/WRAITH-Protocol"
edition = "2024"
rust-version = "1.88"

[lib]
name = "wraith_mesh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wraith-mesh"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
# Tauri 2.x
tauri = { version = "2.2", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-notification = "2.2"

# WRAITH Protocol
wraith-core = { path = "../../../crates/wraith-core" }
wraith-discovery = { path = "../../../crates/wraith-discovery" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
