[package]
name = "spectre-implant"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# No std dependencies
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
snow = { version = "0.10", default-features = false, features = ["default-resolver", "default-resolver-crypto"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
zeroize = { version = "1.7", default-features = false, features = ["alloc", "derive"] }
wraith-crypto = { path = "../../../crates/wraith-crypto", default-features = false }
# winapi for raw windows definitions if needed, but we prefer manual definitions for stealth
# winapi = { version = "0.3", features = ["winnt"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
panic = "abort"     # Abort on panic
strip = true        # Strip symbols
codegen-units = 1   # Maximize optimization

[profile.dev]
panic = "abort"

[profile.test]
panic = "abort"
[workspace]
