[package]
name = "spectre-implant"
version = "2.3.4"
edition = "2021"

[features]
default = []
std = []

[lib]
crate-type = ["rlib"]

[dependencies]
# No std dependencies
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
snow = { version = "0.10", default-features = false, features = ["default-resolver", "default-resolver-crypto"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
zeroize = { version = "1.7", default-features = false, features = ["alloc", "derive"] }
base64 = { version = "0.21", default-features = false, features = ["alloc"] }
wraith-crypto = { path = "../../../crates/wraith-crypto", default-features = false }
miniz_oxide = { version = "0.7", default-features = false, features = ["with-alloc"] }
# winapi for raw windows definitions if needed, but we prefer manual definitions for stealth
# winapi = { version = "0.3", features = ["winnt"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
panic = "abort"     # Abort on panic
strip = true        # Strip symbols
codegen-units = 1   # Maximize optimization

[profile.dev]
# panic = "abort" removed: test harness requires unwinding (catch_unwind).
# Release profile retains panic = "abort" for the actual implant binary.
# no_std/panic_handler/global_allocator are gated with
# #[cfg(not(any(test, feature = "std")))] in lib.rs.

[workspace]
