[package]
name = "team-server"
version = "2.3.6"
description = "WRAITH RedOps Team Server - Command and Control Infrastructure"
authors = ["WRAITH Protocol Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/doublegate/WRAITH-Protocol"
edition = "2024"
rust-version = "1.88"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1.18"

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Database - sqlx umbrella uses only features that don't reference sqlx-sqlite
# (avoids libsqlite3-sys links conflict with rusqlite in workspace)
# Type features (json, chrono, uuid, migrate) go through sqlx-postgres directly
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "ipnetwork"] }
sqlx-core = { version = "=0.8.6", features = ["migrate"] }
sqlx-postgres = { version = "=0.8.6", features = ["json", "chrono", "uuid", "migrate"] }
ipnetwork = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
base64 = "0.22"

# WRAITH Protocol
wraith-core = { path = "../../../crates/wraith-core" }
wraith-crypto = { path = "../../../crates/wraith-crypto" }
wraith-transport = { path = "../../../crates/wraith-transport" }
dashmap = "5.5"
blake3.workspace = true

[dev-dependencies]
tempfile = "3.8"
serial_test = "2.0"

[build-dependencies]
tonic-build = "0.12"
