[package]
name = "wraith-stream"
version = "2.0.2"
description = "WRAITH-Stream - Encrypted Peer-to-Peer Media Streaming"
authors = ["WRAITH Protocol Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/doublegate/WRAITH-Protocol"
edition = "2024"
rust-version = "1.85"

[lib]
name = "wraith_stream_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wraith-stream"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
# Tauri 2.x
tauri = { version = "2.2", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-notification = "2.2"

# WRAITH Protocol
wraith-core = { path = "../../../crates/wraith-core" }
wraith-crypto = { path = "../../../crates/wraith-crypto" }
wraith-files = { path = "../../../crates/wraith-files" }
wraith-discovery = { path = "../../../crates/wraith-discovery" }

# Async runtime
tokio = { version = "1", features = ["full", "process"] }

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Cryptography
blake3 = "1"
chacha20poly1305 = "0.10"
rand = "0.8"
getrandom = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
hex = "0.4"

# HLS parsing
m3u8-rs = "6"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
