[package]
name = "wraith-transfer"
version = "1.7.1"
description = "WRAITH Transfer - Secure peer-to-peer file transfer"
authors = ["WRAITH Protocol Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/doublegate/WRAITH-Protocol"
edition = "2024"
rust-version = "1.85"

[lib]
name = "wraith_transfer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"

# Hex encoding
hex = "0.4"

# WRAITH Protocol integration
wraith-core = { path = "../../../crates/wraith-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
