[package]
name = "wraith-vault"
version = "2.2.0"
description = "WRAITH-Vault - Distributed Secret Storage with Shamir's Secret Sharing"
authors = ["WRAITH Protocol Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/doublegate/WRAITH-Protocol"
edition = "2024"
rust-version = "1.85"

[lib]
name = "wraith_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wraith-vault"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
# Tauri 2.x
tauri = { version = "2.2", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-notification = "2.2"

# WRAITH Protocol
wraith-core = { path = "../../../crates/wraith-core" }
wraith-crypto = { path = "../../../crates/wraith-crypto" }
wraith-files = { path = "../../../crates/wraith-files" }
wraith-discovery = { path = "../../../crates/wraith-discovery" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Cryptography
blake3 = "1"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }

# Compression
zstd = "0.13"

# Erasure Coding
reed-solomon-erasure = "6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
hex = "0.4"
walkdir = "2"
cron = "0.15"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
