[package]
name = "operator-client"
version = "2.3.7"
description = "WRAITH RedOps Operator Console"
authors = ["WRAITH Protocol Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/doublegate/WRAITH-Protocol"
edition = "2024"
rust-version = "1.88"

[lib]
name = "wraith_redops_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wraith-redops-client"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }
tonic-build = "0.12"

[dependencies]
# Tauri 2.x
tauri = { version = "2.2", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-notification = "2.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WRAITH Protocol
wraith-core = { path = "../../../../crates/wraith-core" }
wraith-crypto = { path = "../../../../crates/wraith-crypto" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
