[package]
name = "wraith-android"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"

[lib]
crate-type = ["cdylib"]
name = "wraith_android"

[dependencies]
# JNI bindings
jni = "0.21"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
android_logger = "0.14"

# Error handling
thiserror = "2"
anyhow = "1.0"

# WRAITH Protocol (relative paths to workspace)
wraith-core = { path = "../../../../../crates/wraith-core" }
wraith-crypto = { path = "../../../../../crates/wraith-crypto" }
wraith-transport = { path = "../../../../../crates/wraith-transport" }
wraith-discovery = { path = "../../../../../crates/wraith-discovery" }
wraith-files = { path = "../../../../../crates/wraith-files" }

[features]
android = []
